# turbo-ckf

./: .dockerignore  .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  PUBLISHING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
examples/: README.md  quickstart_cv.py
src/: lib.rs
turbo_ckf/: README.md  __init__.py  core.py  paper_ahrs.py  requirements-dev.txt  setup_env.sh
turbo_ckf_tests/: benchmark.py  benchmark_paper.py  test_adaptive_noise.py  test_api.py  test_batch_filter.py  test_batch_parallel_step.py  test_benchmark_pytest.py  test_core_validation.py  test_correctness_invariants.py  test_filterpy_parity.py  test_math.py  test_paper_ahrs_validation.py  test_paper_alignment.py  test_rts_smoother.py  test_rust_backend.py  test_sr_ckf.py  test_vectorization.py  test_verification_helpers.py  verify_before_after.py
