[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "turbo-ckf"
version = "0.1.0"
description = "Turbo-CKF: High-performance Cubature Kalman Filter"
authors = [{ name = "Mohammed Khalid" }]
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
dependencies = ["numpy>=1.22"]
keywords = ["kalman-filter", "cubature-kalman-filter", "sensor-fusion", "rust", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "numpy",
  "filterpy",
  "pytest",
  "pytest-benchmark",
  "maturin",
]

[project.urls]
Homepage = "https://github.com/mokhld/turbo-ckf"
Repository = "https://github.com/mokhld/turbo-ckf"
Issues = "https://github.com/mokhld/turbo-ckf/issues"

[tool.maturin]
module-name = "turbo_ckf._rust"
python-source = "."
features = ["pyo3/extension-module"]
